# darling-xnu

./: README.md
darling/src/libsystem_kernel/emulation/: CMakeLists.txt
darling/src/libsystem_kernel/emulation/common/: CMakeLists.txt  simple.c  simple.h
darling/src/libsystem_kernel/emulation/conversion/: CMakeLists.txt  at.c  at.h  errno.c  errno.h  network.h  signal.c  signal.h  stat.c  stat.h  utsname.h
darling/src/libsystem_kernel/emulation/conversion/mman/: mman.h
darling/src/libsystem_kernel/emulation/conversion/network/: common.c
darling/src/libsystem_kernel/emulation/conversion/signal/: context.c  context.h  sigaction.c  sigaction.h  sigexc.c  sigexc.h
darling/src/libsystem_kernel/emulation/darling/: CMakeLists.txt  legacy_lkm.c  legacy_lkm.h
darling/src/libsystem_kernel/emulation/darling/c_api/: elfcalls_wrapper.c  for_libkqueue.c  for_libkqueue.h
darling/src/libsystem_kernel/emulation/darling/init/: mach_driver.c  mach_driver.h  sigexc.c
darling/src/libsystem_kernel/emulation/darling/server/: dserver-rpc-defs.c  dserver-rpc-defs.h  vchroot_userspace.c  vchroot_userspace.h
darling/src/libsystem_kernel/emulation/darling/tsd/: perthread_wd.h
darling/src/libsystem_kernel/emulation/include/common/: base.h  simple.h
darling/src/libsystem_kernel/emulation/include/common/bsdthread/: per_thread_wd.h
darling/src/libsystem_kernel/emulation/include/conversion/: common_at.h  duct_errno.h  errno.h
darling/src/libsystem_kernel/emulation/include/conversion/dirent/: getdirentries.h
darling/src/libsystem_kernel/emulation/include/conversion/fcntl/: fcntl.h  open.h
darling/src/libsystem_kernel/emulation/include/conversion/ioctl/: ioctl.h  termios.h
darling/src/libsystem_kernel/emulation/include/conversion/misc/: getrlimit.h  sysctl_inc.h
darling/src/libsystem_kernel/emulation/include/conversion/mman/: duct_mman.h  msync.h
darling/src/libsystem_kernel/emulation/include/conversion/network/: duct.h  getsockopt.h  recvmsg.h  socket.h
darling/src/libsystem_kernel/emulation/include/conversion/process/: posix_spawn.h  priority.h  wait4.h
darling/src/libsystem_kernel/emulation/include/conversion/stat/: common.h
darling/src/libsystem_kernel/emulation/include/linux_premigration/: elfcalls_wrapper.h  vchroot_expand.h
darling/src/libsystem_kernel/emulation/linux/: CMakeLists.txt  base.c  base.h  common_at.h  duct_errno.h  elfcalls_wrapper.c  elfcalls_wrapper.h  fdpath.c  linux-syscall.S  simple.c  syscalls-table.S  tsd.h  vchroot_expand.h  xtrace-hooks.S
darling/src/libsystem_kernel/emulation/linux/audit/: audit_addr.c  audit_session_join.c  audit_session_join.h  audit_session_port.h
darling/src/libsystem_kernel/emulation/linux/bsdthread/: bsdthread_register.c  bsdthread_register.h  per_thread_wd.h  pthread_chdir.c  pthread_fchdir.c  workq_kernreturn.c
darling/src/libsystem_kernel/emulation/linux/ext/: epoll_create.c  futex.h
darling/src/libsystem_kernel/emulation/linux/fcntl/: open.h
darling/src/libsystem_kernel/emulation/linux/linux-syscalls/: linux-generic.h
darling/src/libsystem_kernel/emulation/linux/mach/: CMakeLists.txt  darling_mach_syscall.S  lkm.h
darling/src/libsystem_kernel/emulation/linux/machdep/: machdep-table.S  tls.c
darling/src/libsystem_kernel/emulation/linux/misc/: proc_info.c  reboot.c  sysctl_kern.c  sysctl_machdep.c
darling/src/libsystem_kernel/emulation/linux/process/: wait4.c
darling/src/libsystem_kernel/emulation/linux/resources/: dserver-rpc-defs.c
darling/src/libsystem_kernel/emulation/linux/select/: select.c
darling/src/libsystem_kernel/emulation/linux/signal/: exc.defs  sig_restorer.S  sigaction.c  sigaction.h  sigaltstack.h  sigexc.c
darling/src/libsystem_kernel/emulation/linux/stat/: common.c  common.h  fstat.c  fstat.h  fstat64_extended.c  fstat64_extended.h  fstatat.c  fstatat.h  fstatfs.c  getfsstat.c  lstat.c  lstat.h  lstat64_extended.c  lstat64_extended.h  mkdirat.c  mkfifo.c  stat.c  stat.h  stat64_extended.c  stat64_extended.h
darling/src/libsystem_kernel/emulation/linux/unistd/: close.c  dup.c  dup2.c  faccessat.c  fchmodat.c  fchownat.c  getgroups.c  getpgrp.c  linkat.c  renameat.c  setgroups.c  truncate.c  unlinkat.c
darling/src/libsystem_kernel/emulation/linux/xattr/: getattrlist_generic.c
darling/src/libsystem_kernel/emulation/linux_api/: CMakeLists.txt  linux_syscall.S  linux_syscall.h
darling/src/libsystem_kernel/emulation/linux_api/c_api/: clock.c  clock.h  epoll.c  eventfd.c  fanotify.c  fanotify.h  file_handle.c  file_handle.h  futex.c  futex.h  inotify.c  ioctl.c  ioctl.h  mremap.c  mremap.h  nanosleep.c  nanosleep.h  sched_yield.c  sched_yield.h  sig_restorer.S  signalfd.c  timerfd.c
darling/src/libsystem_kernel/emulation/src/common/: base.c  simple.c
darling/src/libsystem_kernel/emulation/src/conversion/: CMakeLists.txt  errno.c
darling/src/libsystem_kernel/emulation/src/darling/: CMakeLists.txt  legacy_lkm.c  weak_stubs.c
darling/src/libsystem_kernel/emulation/src/legacy_path/: base.c  common_at.c  elfcalls_wrapper.c  errno.c  fdpath.c  readline.c  simple.c  syscalls.c  vchroot_userspace.c
darling/src/libsystem_kernel/emulation/src/linux_api/: CMakeLists.txt
darling/src/libsystem_kernel/emulation/src/linux_premigration/: elfcalls_wrapper.c  linux-syscall.S  vchroot_userspace.c
darling/src/libsystem_kernel/emulation/src/xnu_syscall/: CMakeLists.txt
darling/src/libsystem_kernel/emulation/xnu_syscall/: CMakeLists.txt
darling/src/libsystem_kernel/emulation/xnu_syscall/bsd/: bsd_syscall.c  bsd_syscall_arch_asmbridge.S  bsd_syscall_table.c  bsd_syscall_table.h
darling/src/libsystem_kernel/emulation/xnu_syscall/mach/: mach_syscall.c  mach_syscall_arch_asmbridge.S  mach_syscall_table.c  mach_syscall_table.h
darling/src/libsystem_kernel/emulation/xnu_syscall/machdep/: machdep_syscall.c  machdep_syscall.h  machdep_syscall_arch_asmbridge.S  machdep_syscall_table.c  machdep_syscall_table.h
darling/src/libsystem_kernel/emulation/xnu_syscall/shared/: at.c  fdpath.c  fdpath.h
darling/src/libsystem_kernel/emulation/xnu_syscall/trace/: xtrace_api.c  xtrace_api.h
(+1231 files in other folders)
